fix button spacing issue

--- a/responsive.css
+++ b/responsive.css
@@ -107,16 +107,9 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    white-space: nowrap;
+    width: auto;
   }
-
-  .step-button-back {
-    width: 30%;
-  }
-
-  .step-button-next {
-    width: 51%;
-  }
-
   .tool-frame {
     flex-direction: column;
     gap: 0px;
